# quack

./: .gitignore  .gitmodules  CHANGELOG.md  LICENCE.md  Makefile  README.md  bochsrc  config.mk  grub.cfg  linker.ld  make-iso.sh  mkinitramfs.sh  prepare_initrd.sh  run.sh
boot/: boot.asm  boot.s  boot2.asm
duck/: meson.build  meson_options.txt
duck/inc/duck/: calls.h  error.h  syscall.h  types.h
duck/src/: stubs.cpp
initrd/: Makefile  hello.txt  initrd  welcome
initrd/kbmaps/: kbmap_enUS.kbd
initrd/src/: clear.c  crash.c  date.c  dump.c  exec.c  init.c  ls.c  mouse-cursor.c  note.c  paint.c  pond.c  rules.mk  sbrk_test.c  screenfetch.c  sh.c  test-irq.c  test.asm  uptime.c  vgatty.c
initrd/src/exec/: Makefile  exec.c
initrd/src/i8042d/: Makefile  i8042d.c
initrd/src/init/: Makefile  init.c
initrd/src/initfs/: Makefile  initfs.c
initrd/src/lib/: Makefile  ctype.c  ctype.h  debug_out.c  debug_out.h  liballoc.c  liballoc.h  liballoc_funcs.c  message.c  message.h  string.c  string.h  uuid.c
initrd/src/logd/: Makefile  logd.c
initrd/src/servman/: Makefile  servman.c
initrd/src/sys/: Makefile  elf.c  elf.h  global_data.h  syscall.c  syscall.h  uuid.h
initrd/src/vgatty/: Makefile  vgatty.c
kernel/: Makefile  cmdline.c  cmdline.h  devmgr.c  devmgr.h  generic_irq.c  generic_irq.cpp  generic_irq.h  initrd.c  initrd.h  kernel.c  kernel.cc  kernel.cpp  kmesg.c  kmesg.h  kobj.c  kobj.h  mesg.c  mesg.cc  mesg.h  meson.build  msg.cpp  msg.h  panic.c  panic.cc  panic.h  syscall.cpp  syscall.h  ubsan.c  ubsan.cc  util.c  vsnprintf.c  vsnprintf.h  vsprintf.c  vsprintf.cc  vsprintf.h
kernel/arch/: arch.h  cpu.h  info.h  io.h  mm.h  task.h  x86_64-cross-file
kernel/arch/i386/: Makefile  arch_entry.c  arch_entry.cpp  linker.ld  rules.mk
kernel/arch/i386/boot/: boot.asm
kernel/arch/i386/cpu/gdt/: gdt.c  gdt.h  gdt_load.asm
kernel/arch/i386/cpu/int/: idt.h  idt_load.asm  isr.cpp
kernel/arch/i386/mm/: pmm.cpp  vmm.cpp
kernel/arch/x86_64/: Makefile  arch_entry.c  arch_entry.cpp  initarray.cpp  linker.ld  meson.build  multiboot.h  rules.mk  symtab.c
kernel/arch/x86_64/acpi/: Makefile  acpi.c  acpi.cpp  acpi.h  lai_host.c  lai_host.cpp  madt.c  madt.cpp
kernel/arch/x86_64/boot/: boot.asm
kernel/arch/x86_64/cpu/: cpu.c  cpu.h  cpu_data.c  cpu_data.h  ctx.h  ctx_switch.asm  gdt.c  gdt.cpp  gdt.h  ioapic.c  ioapic.cpp  ioapic.h  lapic.c  lapic.cpp  lapic.h  lock.c  smp.c  smp.cpp  smp.h  smp_trampoline.asm
kernel/arch/x86_64/io/: debug.c  debug.cpp  debug.h  dev.c  mem.asm  pci.c  pci.cpp  pci.h  port.c  port.h  vga.c  vga.h
kernel/arch/x86_64/irq/: idt.c  idt.cpp  idt.h  irq_handler.asm  irq_layout.txt  isr.c  isr.cpp  isr.h
kernel/arch/x86_64/irq/pic/: pic.c  pic.cpp  pic.h
kernel/arch/x86_64/mm/: mm.h  pmm.c  pmm.cpp  pmm.h  vmm.c  vmm.cpp  vmm.h
kernel/arch/x86_64/task/: task.asm  task.c  task.cpp
kernel/cpu/: gdt.asm  gdt_new.c  usermode_switch.asm
kernel/devices/: devices.h  initrd.cc  mouse.cc  serial.cc  time.cc  tty.cc  uptime.cc  videomode.cc
kernel/drivers/: drv.cc  drv.h  pci.cc  pci.h
kernel/drivers/devs/: dummy1.cc  dummy1.h  ps2k.cc  ps2k.h  ps2m.cc
kernel/fs/: devfs.cc  devfs.h  ustar.c  ustar.cc  ustar.h  vfs.cc  vfs.h
kernel/genfb/: font.h  genfb.c  genfb.cpp  genfb.h
kernel/interrupt/: idt.c  idt.cc  idt.h  interrupt.asm  isr.c  isr.cc  isr.h
kernel/io/: debug_port.c  debug_port.h  ports.cc  ports.h  rtc.c  rtc.cc  rtc.h  serial.c  serial.cc  serial.h
kernel/kbd/: ps2kbd.cc  ps2kbd.h
kernel/kheap/: heap.cc  heap.h  liballoc.cc  liballoc.h  liballoc_funcs.c  liballoc_funcs.cc
kernel/kshell/: shell.cc  shell.h
kernel/lib/: ctype.c  ctype.cpp  ctype.h  frg_allocator.h  function_traits.h  kmesg.cpp  kmesg.h  panic.c  panic.cpp  panic.h  stdlib.cc  stdlib.cpp  stdlib.h  string.c  string.cc  string.cpp  string.h  unique.h  vsnprintf.c  vsnprintf.h
kernel/loader/: elf32.h  elf64.c  elf64.cpp  elf64.h  elf_common.h
kernel/mm/: heap.c  heap.cpp  heap.h  liballoc_funcs.c  vm.cpp  vm.h
kernel/mouse/: ps2mouse.cc  ps2mouse.h
kernel/object/: group.cpp  ipc_queue.cpp  object.h
kernel/paging/: paging.c  paging.cc  paging.h  pmm.c  pmm.cc  pmm.h
kernel/pic/: pic.c  pic.h
kernel/proc/: groups.h  proc.cpp  proc.h  scheduler.c  scheduler.c.other  scheduler.cpp  scheduler.h
kernel/sched/: elf.c  elf.h  sched.c  sched.h  task.c  task.h  task_enter.asm
kernel/symtab/: symtab.c  symtab.cpp  symtab.h
kernel/syscall/: handlers.c  syscall.c  syscall.cc  syscall.h
kernel/tasking/: elf.c  elf.cc  elf.h  tasking.c  tasking.cc  tasking.h  tasking_enter.asm
kernel/trace/: stacktrace.c  stacktrace.cc  stacktrace.h  trace.cc  trace.h
kernel/tty/: tty.cc  tty.h
kernel/tty/backends/: vesa_font.cc  vesa_font.h  vesa_text.cc  vesa_text.h  vga_text.cc  vga_text.h
kernel/util/: cmdline.cpp  initrd.c  initrd.cpp  initrd.h  spinlock.c  spinlock.cpp  spinlock.h  util.c  util.cpp  util.h
servers/: cross-file  meson.build  meson_options.txt
servers/startup/: meson.build  startup.cc
test_bin/: test.asm  test2.asm  test2.c  test3.asm  test_elf.c
utils/: menuconfig.sh  opts2conf.py  trace2funcs.py  trace_map.py
